<resources>
    <string name="app_name">Food Jar</string>
    <string name="phone_">Phone (+91 )</string>
    <string name="postal_address">City</string>
    <string name="age">Age</string>
    <string name="enter_your_name">Name</string>
    <string name="application_page">APPLICATION</string>
    <string name="submit">SUBMIT</string>
    <string name="vehicle_prompt">Your Vehicle</string>
    <string name="email">Email (abc@gmail.com)</string>
    <string name="email_login">Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Create Password</string>
    <string name="deliveryagent">DeliveryAgent</string>
    <string name="customer">Customer</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user_signup">New User SignUp</string>
    <string name="_3">3</string>
    <string name="orders_n_delivered_today">Orders \n Delivered Today</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="_10_00_n_am">10:00 \n AM</string>
    <string name="orders_ndelivered_today">Orders \nDelivered Today</string>
    <string name="hyderabad">Hyderabad</string>

    <string-array name="vehicles">
        <item>Bike</item>
        <item>Cycle</item>
        <item>E-Cycle</item>
        <item>None</item>
    </string-array>
</resources>
